feat: update transactions table (#359)
